New dev deploy from 18/11/2020

--- a/main.css
+++ b/main.css
@@ -1277,7 +1277,7 @@ section .section-text.centered {
 #ipad-ar-preview {
   width: 1061px;
   height: 554px;
-  background: url(assets/images/ipad-ar-peview.jpg);
+  background: url(/assets/images/ipad-ar-peview.jpg);
   background-size: 1061px 554px;
   margin-left: -39px;
   margin-top: 40px;
@@ -1337,7 +1337,7 @@ section .section-text.centered {
 .padhor .tabletop {
   width: 316px;
   height: 144px;
-  background-image: url(assets/images/photo-tabletop.jpg);
+  background-image: url(/assets/images/photo-tabletop.jpg);
   background-size: cover;
   margin-top: 20px;
   border-radius: 4px;
@@ -1464,7 +1464,7 @@ section .section-text.centered {
 .letter-photo {
   width: 378px;
   height: 238px;
-  background-image: url(assets/images/photo-letter.jpg);
+  background-image: url(/assets/images/photo-letter.jpg);
   background-size: 378px 238px;
 }
 @media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) {
@@ -1487,7 +1487,7 @@ section .section-text.centered {
 .outlook {
   width: 421px;
   height: 500px;
-  background-image: url(assets/images/outlook.png);
+  background-image: url(/assets/images/outlook.png);
   background-size: 421px 500px;
   background-repeat: no-repeat;
   margin-left: 40px;
@@ -1526,7 +1526,7 @@ section .section-text.centered {
   left: 0;
   position: absolute;
   z-index: 3;
-  background-image: url(assets/images/iphone-11-border.png);
+  background-image: url(/assets/images/iphone-11-border.png);
   background-color: transparent;
   background-size: cover;
   display: flex;
@@ -1582,7 +1582,7 @@ section .section-text.centered {
   width: 896px;
   height: 448px;
   background-size: 896px 448px;
-  background-image: url(assets/images/iphone-xr.png);
+  background-image: url(/assets/images/iphone-xr.png);
   margin: 40px auto 60px;
   display: flex;
   justify-content: stretch;
@@ -1740,7 +1740,7 @@ section .section-text.centered {
   width: 652px;
   height: 472px;
   background-size: 652px 472px;
-  background-image: url(assets/images/ipad-pro-mock.png);
+  background-image: url(/assets/images/ipad-pro-mock.png);
   display: flex;
   justify-content: stretch;
   align-items: stretch;
@@ -1854,13 +1854,13 @@ section .section-text.centered {
   background-color: #ECECEC;
 }
 .footer-container .social-icons .icon.insta {
-  background-image: url(assets/images/insta_icon.png);
+  background-image: url(/assets/images/insta_icon.png);
 }
 .footer-container .social-icons .icon.linked {
-  background-image: url(assets/images/linked_icon.png);
+  background-image: url(/assets/images/linked_icon.png);
 }
 .footer-container .social-icons .icon.youtube {
-  background-image: url(assets/images/youtube_icon.png);
+  background-image: url(/assets/images/youtube_icon.png);
 }
 .footer-container .social-icons .icon:nth-child(even) {
   margin: 0 12px;
@@ -2161,7 +2161,7 @@ section.opack-container {
 .smart-camera {
   width: 620px;
   height: 208px;
-  background-image: url(assets/images/smart-camera.jpg);
+  background-image: url(/assets/images/smart-camera.jpg);
   background-size: 620px 208px;
   margin-bottom: 40px;
 }
@@ -2246,7 +2246,7 @@ section.opack-container {
 .opack-plug-scheme .ipad-big {
   width: 644px;
   height: 500px;
-  background: url(assets/images/layout-setup.jpg);
+  background: url(/assets/images/layout-setup.jpg);
   background-size: 644px 500px;
   flex-shrink: 0;
   position: relative;
@@ -2285,7 +2285,7 @@ section.opack-container {
 .opack-plug-scheme .intel-pc {
   width: 108px;
   height: 493px;
-  background: url(assets/images/intel-pc.jpg);
+  background: url(/assets/images/intel-pc.jpg);
   background-size: 108px 493px;
   flex-shrink: 0;
   display: block;
@@ -2327,7 +2327,7 @@ section.opack-container {
   position: relative;
   width: 606px;
   height: 491px;
-  background-image: url(assets/images/palletization-stand.jpg);
+  background-image: url(/assets/images/palletization-stand.jpg);
   background-size: 606px 491px;
   flex-shrink: 0;
 }
@@ -2594,38 +2594,38 @@ section.opack-container {
 .logos .schmalz {
   width: 122px;
   height: 80px;
-  background-image: url(assets/images/logo-schmalz.jpg);
+  background-image: url(/assets/images/logo-schmalz.jpg);
 }
 .logos .onrobot {
   width: 151px;
   height: 60px;
-  background-image: url(assets/images/logo-onrobot.jpg);
+  background-image: url(/assets/images/logo-onrobot.jpg);
 }
 .logos .piab {
   width: 122px;
   height: 43px;
-  background-image: url(assets/images/logo-piab.jpg);
+  background-image: url(/assets/images/logo-piab.jpg);
 }
 .logos .easy-robotics {
   width: 222px;
   height: 43px;
-  background-image: url(assets/images/logo-easy-robotics.png);
+  background-image: url(/assets/images/logo-easy-robotics.png);
 }
 .logos .ewellix {
   width: 186px;
   height: 44px;
-  background-image: url(assets/images/logo-ewellix.png);
+  background-image: url(/assets/images/logo-ewellix.png);
   margin-top: 16px;
 }
 .logos .piab {
   width: 122px;
   height: 43px;
-  background-image: url(assets/images/logo-piab.jpg);
+  background-image: url(/assets/images/logo-piab.jpg);
 }
 .logos .rollon {
   width: 161px;
   height: 43px;
-  background-image: url(assets/images/logo-rollon.jpg);
+  background-image: url(/assets/images/logo-rollon.jpg);
 }
 @media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) {
   .logos {
@@ -2635,7 +2635,7 @@ section.opack-container {
 .ur-certified {
   width: 419px;
   height: 154px;
-  background-image: url(assets/images/ur-plus-certified.png);
+  background-image: url(/assets/images/ur-plus-certified.png);
   background-size: contain;
   background-repeat: no-repeat;
   margin: 60px 0 110px;
@@ -2671,72 +2671,72 @@ section.opack-container {
 .integrators .fluitronic {
   width: 268px;
   height: 38px;
-  background-image: url(assets/images/iterpack.png);
+  background-image: url(/assets/images/iterpack.png);
 }
 .integrators .vicosystems {
   width: 260px;
   height: 38px;
-  background-image: url(assets/images/logo-vicosystems.png);
+  background-image: url(/assets/images/logo-vicosystems.png);
 }
 .integrators .sea {
   width: 143px;
   height: 45px;
-  background-image: url(assets/images/logo-sea.png);
+  background-image: url(/assets/images/logo-sea.png);
 }
 .integrators .iruna {
   width: 144px;
   height: 55px;
-  background-image: url(assets/images/logo-iruna.png);
+  background-image: url(/assets/images/logo-iruna.png);
 }
 .integrators .cfz-robot {
   width: 127px;
   height: 69px;
-  background-image: url(assets/images/logo-cfz-robots.png);
+  background-image: url(/assets/images/logo-cfz-robots.png);
 }
 .integrators .elektres {
   width: 214px;
   height: 58px;
-  background-image: url(assets/images/logo-itsme-elektres.png);
+  background-image: url(/assets/images/logo-itsme-elektres.png);
 }
 .integrators .epl {
   width: 155px;
   height: 84px;
-  background-image: url(assets/images/epl_logo.png);
+  background-image: url(/assets/images/epl_logo.png);
 }
 .integrators .impertek {
   width: 237px;
   height: 88px;
-  background-image: url(assets/images/impertek.png);
+  background-image: url(/assets/images/impertek.png);
 }
 .integrators .eins {
   width: 285px;
   height: 61px;
-  background-image: url(assets/images/einsrobotics-logo.png);
+  background-image: url(/assets/images/einsrobotics-logo.png);
 }
 .integrators .procobot {
   width: 222px;
   height: 72px;
-  background-image: url(assets/images/procobot.png);
+  background-image: url(/assets/images/procobot.png);
 }
 .integrators .fluit {
   width: 151px;
   height: 43px;
-  background-image: url(assets/images/fluitronic.png);
+  background-image: url(/assets/images/fluitronic.png);
 }
 .integrators .pst {
   width: 172px;
   height: 78px;
-  background-image: url(assets/images/pst.jpg);
+  background-image: url(/assets/images/pst.jpg);
 }
 .integrators .robot-plus {
   width: 107px;
   height: 53px;
-  background-image: url(assets/images/logo-robot-plus.png);
+  background-image: url(/assets/images/logo-robot-plus.png);
 }
 .integrators .sinterpack {
   width: 102px;
   height: 64px;
-  background-image: url(assets/images/logo-sinterpack.png);
+  background-image: url(/assets/images/logo-sinterpack.png);
 }
 @media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) {
   .integrators {
@@ -2818,7 +2818,7 @@ section.opack-container {
 .app-mock {
   width: 636px;
   height: 460px;
-  background-image: url(assets/images/ipad-11-border.jpg);
+  background-image: url(/assets/images/ipad-11-border.jpg);
   background-size: 636px 460px;
   display: flex;
   justify-content: stretch;
@@ -3724,7 +3724,7 @@ section.opack-container {
   height: 526px;
   position: absolute;
   display: block;
-  background: url(assets/images/abstract.jpg);
+  background: url(/assets/images/abstract.jpg);
   background-size: cover;
   z-index: 1;
   display: none;
@@ -3740,7 +3740,7 @@ section.opack-container {
   width: 440px;
   height: 526px;
   position: relative;
-  background-image: url(assets/images/robot-steel.jpg);
+  background-image: url(/assets/images/robot-steel.jpg);
   background-repeat: no-repeat;
   background-size: contain;
   z-index: 3;
