--- a/main.css
+++ b/main.css
@@ -2173,9 +2173,9 @@ section.opack-container {
     background-size: contain;
   }
 }
-.blue-button {
+.orange-button {
   display: inline-block;
-  background: #0071E3;
+  background: #Ff9500;
   padding: 6px 16px;
   border-radius: 20px;
   margin-top: 24px;
@@ -2185,9 +2185,9 @@ section.opack-container {
   text-align: center;
   color: #fff;
 }
-.blue-button:hover {
+.orange-button:hover {
   cursor: pointer;
-  background: #0481FF;
+  opacity: 0.8;
 }
 .webgl-frame-wide {
   width: 100%;
@@ -2646,103 +2646,6 @@ section.opack-container {
     height: 98px;
   }
 }
-.integrators {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  margin-top: 60px;
-}
-.integrators div {
-  background-size: contain;
-  background-repeat: no-repeat;
-  margin-right: 44px;
-}
-@media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) {
-  .integrators div {
-    margin-right: 0;
-    margin-bottom: 44px;
-  }
-}
-.integrators div:last-child {
-  margin-right: 0;
-}
-.integrators .fluitronic {
-  width: 268px;
-  height: 38px;
-  background-image: url(/assets/images/iterpack.png);
-}
-.integrators .vicosystems {
-  width: 260px;
-  height: 38px;
-  background-image: url(/assets/images/logo-vicosystems.png);
-}
-.integrators .sea {
-  width: 143px;
-  height: 45px;
-  background-image: url(/assets/images/logo-sea.png);
-}
-.integrators .iruna {
-  width: 144px;
-  height: 55px;
-  background-image: url(/assets/images/logo-iruna.png);
-}
-.integrators .cfz-robot {
-  width: 127px;
-  height: 69px;
-  background-image: url(/assets/images/logo-cfz-robots.png);
-}
-.integrators .elektres {
-  width: 214px;
-  height: 58px;
-  background-image: url(/assets/images/logo-itsme-elektres.png);
-}
-.integrators .epl {
-  width: 155px;
-  height: 84px;
-  background-image: url(/assets/images/epl_logo.png);
-}
-.integrators .impertek {
-  width: 237px;
-  height: 88px;
-  background-image: url(/assets/images/impertek.png);
-}
-.integrators .eins {
-  width: 285px;
-  height: 61px;
-  background-image: url(/assets/images/einsrobotics-logo.png);
-}
-.integrators .procobot {
-  width: 222px;
-  height: 72px;
-  background-image: url(/assets/images/procobot.png);
-}
-.integrators .fluit {
-  width: 151px;
-  height: 43px;
-  background-image: url(/assets/images/fluitronic.png);
-}
-.integrators .pst {
-  width: 172px;
-  height: 78px;
-  background-image: url(/assets/images/pst.jpg);
-}
-.integrators .robot-plus {
-  width: 107px;
-  height: 53px;
-  background-image: url(/assets/images/logo-robot-plus.png);
-}
-.integrators .sinterpack {
-  width: 102px;
-  height: 64px;
-  background-image: url(/assets/images/logo-sinterpack.png);
-}
-@media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) {
-  .integrators {
-    flex-direction: column;
-  }
-}
 .opack-form {
   margin-top: 24px;
   width: 100%;
@@ -2798,10 +2701,10 @@ section.opack-container {
   white-space: pre-line;
 }
 .opack-text p a {
-  color: #1C8DFF;
+  color: #ff9500;
 }
 .opack-text p a:hover {
-  color: #1b71e1;
+  color: #ff7300;
 }
 .opack-text.wide {
   max-width: none;
@@ -3105,7 +3008,7 @@ section.opack-container {
     font-size: 12px;
     font-family: "Noto Sans", sans-serif;
     text-decoration: none;
-    color: #2787f5;
+    color: #ff9500;
   }
   
   .distributorLinks a:hover {
@@ -3170,17 +3073,17 @@ section.opack-container {
       display: block;
       text-align: center;
       padding: 16px 12px;
-      background: rgba(0, 119, 255, 0.1);
+      background: rgba(255, 149, 0, 0.1);
       font-family: "Roboto", sans-serif;
       font-size: 16px;
       font-weight: 500;
-      color: rgb(51, 68, 88);
+      color: #ff9500;
       margin: 24px 12px 12px 12px;
       border-radius: 8px;
     }
   
     .showMore:hover {
-      background: rgba(0, 119, 255, 0.2);
+      background: rgba(255, 149, 0, 0.2);
     }
   
     .mapLegend .distributors {
@@ -3528,7 +3431,7 @@ section.opack-container {
 }
 .page-container--section .product-card {
   padding: 50px;
-  background: rgba(0, 0, 0, 0.95);
+  background: rgba(0, 0, 0, 0.98);
   z-index: 3;
   position: relative;
   display: flex;
@@ -3719,6 +3622,14 @@ section.opack-container {
     line-height: 1.5em;
   }
 }
+.page-container--section.company .about-company--container .robot-anim {
+  margin-top: 60px;
+}
+@media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) {
+  .page-container--section.company .about-company--container .robot-anim {
+    margin-top: 0;
+  }
+}
 .page-container--section.company .about-company--container .abstract {
   width: 440px;
   height: 526px;
@@ -3770,8 +3681,8 @@ section.opack-container {
 }
 @media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) {
   .page-container--section.customers .customers-container .subheader {
-    margin-bottom: 10px;
     padding: 0 20px;
+    margin-bottom: 20px;
   }
 }
 .page-container--section.customers .customers-container .description-map {
@@ -3971,7 +3882,7 @@ h1.mainheader {
   font-family: 'Montserrat', sans-serif;
   font-weight: 500;
   color: #ff9500;
-  font-size: 16px;
+  font-size: 17px;
   line-height: 20px;
   text-decoration: none;
   margin: 0;
@@ -3991,7 +3902,7 @@ h1.mainheader {
 }
 .breadcrumbs .crumb:last-child a,
 .breadcrumbs .crumb:last-child p {
-  color: #7E7E7E;
+  color: #333333;
   font-weight: 500;
   cursor: default;
 }
@@ -4080,7 +3991,7 @@ h1.mainheader {
 }
 .blog-post-container .article-list ol,
 .blog-post-container .article-list ul {
-  margin-top: 0;
+  margin-top: 12px;
   list-style-position: inside;
   padding-inline-start: 24px;
 }
@@ -4089,7 +4000,7 @@ h1.mainheader {
   padding: 6px 0;
   font-family: 'Roboto', sans-serif;
   font-weight: normal;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 1.5em;
   color: #37352F;
 }
