--- a/main.css
+++ b/main.css
@@ -3429,6 +3429,9 @@ section.opack-container {
     margin-bottom: 0;
   }
 }
+.page-container--section a {
+  text-decoration: none;
+}
 .page-container--section .product-card {
   padding: 50px;
   background: rgba(0, 0, 0, 0.98);
@@ -3443,11 +3446,13 @@ section.opack-container {
     max-width: none;
     padding: 40px 20px;
     align-items: center;
+    width: 100vw;
+    box-sizing: border-box;
   }
 }
 @media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) {
   .page-container--section .product-card.omnipack {
-    background: linear-gradient(180deg, #FFFFFF 0%, #D4D2D4 100%);
+    background: #f5f5f5;
   }
   .page-container--section .product-card.omnipack .product-card--name {
     color: #000000;
@@ -3464,6 +3469,11 @@ section.opack-container {
   color: #ffffff;
   margin: 0 0 6px 0;
 }
+@media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) {
+  .page-container--section .product-card--name {
+    font-size: 32px;
+  }
+}
 .page-container--section .product-card--description {
   font-family: 'Roboto', sans-serif;
   font-size: 24px;
@@ -3475,7 +3485,9 @@ section.opack-container {
 @media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) {
   .page-container--section .product-card--description {
     text-align: center;
-    padding-top: 10px;
+    padding-top: 0;
+    font-size: 21px;
+    line-height: 1.5em;
   }
 }
 .page-container--section .product-card--actions {
@@ -3485,16 +3497,16 @@ section.opack-container {
 }
 @media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) {
   .page-container--section .product-card--actions {
-    margin-top: 40px;
+    margin-top: 20px;
   }
 }
 .page-container--section .product-card--actions a {
   text-decoration: none;
 }
 .page-container--section .product-card--actions .learn-more {
-  padding: 0 18px;
-  height: 44px;
-  background: #ff9500;
+  padding: 0;
+  height: 24px;
+  background: transparent;
   border-radius: 22px;
   cursor: pointer;
   display: flex;
@@ -3504,16 +3516,22 @@ section.opack-container {
   font-family: 'Roboto', sans-serif;
   font-size: 16px;
   line-height: 19px;
-  color: #ffffff;
+  color: #ff9500;
   font-weight: 500;
 }
 .page-container--section .product-card--actions .learn-more:hover {
-  background: rgba(255, 128, 0, 0.9);
+  background: transparent;
+  opacity: 0.8;
 }
 .page-container--section .product-card--actions .learn-more .arrow {
   width: 16px;
   height: 24px;
   margin-left: 4px;
+}
+@media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) {
+  .page-container--section .product-card--actions .learn-more {
+    font-size: 18px;
+  }
 }
 .page-container--section .product-card--actions .get-demo {
   font-family: 'Roboto', sans-serif;
@@ -3651,7 +3669,7 @@ section.opack-container {
   width: 440px;
   height: 526px;
   position: relative;
-  background-image: url(/assets/images/robot-steel.jpg);
+  background-image: url(/assets/images/robot-steel-2.jpg);
   background-repeat: no-repeat;
   background-size: contain;
   z-index: 3;
@@ -3858,7 +3876,7 @@ h1.mainheader {
   line-height: 19px;
   color: #ffffff;
   font-weight: 500;
-  letter-spacing: 0.02em;
+  letter-spacing: 0.01em;
 }
 .action-button-orange.grey {
   background: #DCDCDC;
@@ -3876,6 +3894,12 @@ h1.mainheader {
   flex-direction: row;
   align-items: center;
   justify-content: flex-start;
+}
+@media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) {
+  .breadcrumbs {
+    padding: 0 20px;
+    margin-top: 20px;
+  }
 }
 .breadcrumbs .crumb a,
 .breadcrumbs .crumb p {
@@ -3928,6 +3952,13 @@ h1.mainheader {
   max-width: 620px;
   margin: 0 auto;
 }
+@media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) {
+  .blog-post-container h1.article-title {
+    font-size: 28px;
+    text-align: left;
+    padding: 0 20px;
+  }
+}
 .blog-post-container .article-time {
   font-size: 14px;
   font-family: 'Roboto', sans-serif;
@@ -3935,6 +3966,12 @@ h1.mainheader {
   color: #6c6c6c;
   text-align: center;
   padding: 20px 0;
+}
+@media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) {
+  .blog-post-container .article-time {
+    text-align: left;
+    padding: 20px;
+  }
 }
 .blog-post-container .article-cover {
   width: auto;
@@ -3945,9 +3982,21 @@ h1.mainheader {
   border-radius: 2px;
   margin-bottom: 64px;
 }
+@media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) {
+  .blog-post-container .article-cover {
+    max-height: 220px;
+    border-radius: 0;
+    margin-bottom: 30px;
+  }
+}
 .blog-post-container .article-header {
   max-width: 620px;
   margin: 16px auto 0;
+}
+@media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) {
+  .blog-post-container .article-header {
+    padding: 0 20px;
+  }
 }
 .blog-post-container .article-header h2,
 .blog-post-container .article-header h3 {
@@ -3967,6 +4016,11 @@ h1.mainheader {
   max-width: 620px;
   margin: 0 auto;
   padding: 12px 0;
+}
+@media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) {
+  .blog-post-container .article-paragraph {
+    padding: 12px 20px;
+  }
 }
 .blog-post-container .article-paragraph p {
   font-family: 'Roboto', sans-serif;
@@ -3988,6 +4042,11 @@ h1.mainheader {
 .blog-post-container .article-list {
   max-width: 620px;
   margin: 0 auto 24px;
+}
+@media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) {
+  .blog-post-container .article-list {
+    padding: 0 20px;
+  }
 }
 .blog-post-container .article-list ol,
 .blog-post-container .article-list ul {
@@ -4029,6 +4088,23 @@ h1.mainheader {
   color: #666666;
   text-align: center;
   margin: 16px 0;
+}
+@media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) {
+  .blog-post-container .article-video .video {
+    position: relative;
+    width: 100%;
+    padding-bottom: 56.25%;
+  }
+}
+@media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) {
+  .blog-post-container .article-video .video iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 0;
+  }
 }
 .blog-post-container .article-image {
   max-width: 620px;
@@ -4073,6 +4149,12 @@ h1.mainheader {
   border-radius: 2px;
   margin-bottom: 20px;
 }
+@media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) {
+  .blog-container .latest-post .cover {
+    height: 220px;
+    border-radius: 0;
+  }
+}
 .blog-container .latest-post .post-title {
   font-family: 'Roboto', sans-serif;
   font-size: 36px;
@@ -4080,6 +4162,13 @@ h1.mainheader {
   color: #000000;
   font-weight: 700;
   margin-bottom: 10px;
+}
+@media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) {
+  .blog-container .latest-post .post-title {
+    font-size: 21px;
+    line-height: 26px;
+    padding: 0 20px;
+  }
 }
 .blog-container .old-posts {
   display: flex;
@@ -4090,6 +4179,11 @@ h1.mainheader {
 }
 .blog-container .old-posts a:nth-child(even) {
   margin-left: 60px;
+}
+@media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) {
+  .blog-container .old-posts a:nth-child(even) {
+    margin-left: 0;
+  }
 }
 .blog-container .old-posts .old-post {
   max-width: 440px;
@@ -4116,6 +4210,14 @@ h1.mainheader {
   color: #000000;
   margin-bottom: 10px;
 }
+@media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) {
+  .blog-container .old-posts .old-post .post-title {
+    padding: 0 20px;
+  }
+}
+.blog-container .old-posts a:last-child > .old-post {
+  margin-bottom: 40px;
+}
 .blog-container .post-time {
   font-family: 'Roboto', sans-serif;
   font-size: 14px;
@@ -4123,11 +4225,22 @@ h1.mainheader {
   color: #6c6c6c;
   margin-bottom: 16px;
 }
+@media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) {
+  .blog-container .post-time {
+    padding: 0 20px;
+    margin-bottom: 10px;
+  }
+}
 .blog-container .post-description {
   font-family: 'Roboto', sans-serif;
   font-size: 18px;
   line-height: 1.5em;
   color: #37352F;
+}
+@media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) {
+  .blog-container .post-description {
+    padding: 0 20px;
+  }
 }
 
 footer {
