New dev deploy from 23/11/2020

--- a/main.css
+++ b/main.css
@@ -422,7 +422,7 @@ section .section-text.centered {
 .outlook {
   width: 421px;
   height: 500px;
-  background-image: url(/assets/images/outlook.png);
+  background-image: url(/assets/images/outlook.jpg);
   background-size: 421px 500px;
   background-repeat: no-repeat;
   margin-left: 40px;
