New dev deploy from 25/11/2020

--- a/2.css
+++ b/2.css
@@ -556,6 +556,10 @@ section.opack-container {
   flex-direction: column;
   align-items: center;
 }
+#ymap {
+  width: 100%;
+  height: 560px;
+}
 
 .opack-title {
   max-width: 450px;
@@ -710,7 +714,7 @@ section.opack-container {
 }
 .contact-form .form-container {
   padding: 42px 32px;
-  border-radius: 10px;
+  border-radius: 4px;
   background: #F6F6F5;
 }
 @media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) {
