--- a/4.css
+++ b/4.css
@@ -93,7 +93,7 @@
 }
 .contact-form .form-container {
   padding: 42px 32px;
-  border-radius: 10px;
+  border-radius: 4px;
   background: #F6F6F5;
 }
 @media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) {
@@ -254,7 +254,7 @@
   }
 }
 .page-container--section.product {
-  height: 70vh;
+  height: 560px;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -313,8 +313,8 @@
 }
 .page-container--section .product-card--name {
   font-family: 'Montserrat', sans-serif;
-  font-size: 46px;
-  line-height: 56px;
+  font-size: 42px;
+  line-height: 52px;
   font-weight: 700;
   color: #ffffff;
   margin: 0 0 6px 0;
@@ -396,7 +396,7 @@
   position: absolute;
   left: 0;
   width: 100%;
-  height: 70vh;
+  height: 560px;
   z-index: 1;
 }
 @media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) {
@@ -409,7 +409,7 @@
 .page-container--section .video-wrapper video,
 .page-container--section .video-wrapper img {
   width: 100%;
-  height: 70vh;
+  height: 560px;
   object-fit: cover;
 }
 @media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) {
