--- a/main.css
+++ b/main.css
@@ -289,6 +289,7 @@ header .header-content .menu-link.active:hover .menu-link--pane {
 header .header-content .menu-link--dropdown {
   display: none;
   background: #000;
+  border: 1px solid rgba(255, 255, 255, 0.12);
   padding: 12px 24px;
   position: absolute;
   top: 80px;
