--- a/2.css
+++ b/2.css
@@ -858,6 +858,26 @@ section.opack-container {
     opacity: 0.5;
   }
 }
+.action-button-orange {
+  padding: 14px 16px;
+  border-radius: 10px;
+  text-align: center;
+  background: #ff9500;
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
+  line-height: 19px;
+  color: #ffffff;
+  font-weight: 500;
+  letter-spacing: 0.01em;
+}
+.action-button-orange.grey {
+  background: #DCDCDC;
+  color: #464646;
+}
+.action-button-orange:hover {
+  opacity: 0.85;
+  cursor: pointer;
+}
 
   .distributors-map > .mapContainer > .distributorMap > svg {
     display: inline-block;
