--- a/3.css
+++ b/3.css
@@ -140,7 +140,7 @@
   }
 }
 section {
-  padding: 60px 0 0 0;
+  padding: 80px 0 0 0;
 }
 @media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) {
   section {
@@ -168,7 +168,7 @@ section.divided {
   border-bottom: 5px solid #252525;
 }
 section.intro {
-  padding-top: 120px;
+  padding-top: 180px;
 }
 section .section-text {
   font-family: 'Roboto', sans-serif;
@@ -872,5 +872,25 @@ section .section-text.centered {
   100% {
     opacity: 0.5;
   }
+}
+.action-button-orange {
+  padding: 14px 16px;
+  border-radius: 10px;
+  text-align: center;
+  background: #ff9500;
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
+  line-height: 19px;
+  color: #ffffff;
+  font-weight: 500;
+  letter-spacing: 0.01em;
+}
+.action-button-orange.grey {
+  background: #DCDCDC;
+  color: #464646;
+}
+.action-button-orange:hover {
+  opacity: 0.85;
+  cursor: pointer;
 }
 
