--- a/4.css
+++ b/4.css
@@ -237,6 +237,26 @@
     opacity: 0.5;
   }
 }
+.action-button-orange {
+  padding: 14px 16px;
+  border-radius: 10px;
+  text-align: center;
+  background: #ff9500;
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
+  line-height: 19px;
+  color: #ffffff;
+  font-weight: 500;
+  letter-spacing: 0.01em;
+}
+.action-button-orange.grey {
+  background: #DCDCDC;
+  color: #464646;
+}
+.action-button-orange:hover {
+  opacity: 0.85;
+  cursor: pointer;
+}
 
 .page-container {
   padding-top: 80px;
