--- a/4.css
+++ b/4.css
@@ -261,6 +261,11 @@
 .page-container {
   padding-top: 80px;
 }
+@media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) {
+  .page-container {
+    padding-top: 60px;
+  }
+}
 .page-container--section {
   width: 940px;
   margin: 0 auto;
