--- a/main.css
+++ b/main.css
@@ -143,6 +143,7 @@ header {
   header {
     background: #ffffff;
     padding: 0 20px;
+    height: 60px;
     -webkit-backdrop-filter: none;
     backdrop-filter: none;
   }
@@ -157,6 +158,7 @@ header .header-content {
 @media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) {
   header .header-content {
     padding: 0;
+    height: 60px;
   }
 }
 header .header-content .nr-top-logo {
