--- a/styles/main.css
+++ b/styles/main.css
@@ -5,31 +5,23 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-tap-highlight-color: rgba(0,0,0,0);
-  /* background: #000000; */
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
 }
 
 :root {
   --common-text-color: #37352F;
 }
 .notfound {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 75vh;
+  padding-top: 60px;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  background: #000;
+  background: #f5f5f5;
 }
 @media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) {
   .notfound {
@@ -43,19 +35,23 @@ code {
 }
 @media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) {
   .notfound-content {
-    flex-direction: column;
+    flex-direction: column-reverse;
   }
 }
-.notfound-content .ufo {
-  position: relative;
-  display: block;
-  width: 222px;
-  height: 186px;
+.notfound-content .code {
+  padding-left: 60px;
 }
 @media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) {
-  .notfound-content .ufo {
-    transform: scale(0.6);
+  .notfound-content .code {
+    padding: 0;
   }
+}
+.notfound-content .code h1 {
+  color: #C0C0C0;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 92px;
+  font-weight: 700;
+  margin: 0 0;
 }
 .notfound-content .description {
   margin-left: 56px;
@@ -63,21 +59,20 @@ code {
 @media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) {
   .notfound-content .description {
     margin-left: auto;
-    padding: 16px;
+    padding: 20px;
   }
 }
 .notfound-content .description h1 {
-  font-family: 'Roboto', sans-serif;
-  font-size: 52px;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 24px;
   font-weight: 700;
-  color: #fff;
+  color: #000000;
   padding: 0;
   margin: 0;
-  line-height: 61px;
 }
 @media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) {
   .notfound-content .description h1 {
-    font-size: 42px;
+    font-size: 28px;
     text-align: center;
   }
 }
@@ -87,44 +82,20 @@ code {
   font-family: "Roboto", sans-serif;
   font-size: 18px;
   line-height: 26px;
-  color: #eeeeee;
+  color: #3c3c3c;
+  max-width: 380px;
+}
+.notfound-content .description p a {
+  color: #ff9500;
+  text-decoration: none;
+}
+.notfound-content .description p a:hover {
+  text-decoration: underline;
 }
 @media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) {
   .notfound-content .description p {
     text-align: center;
   }
-}
-.notfound-content .description .form-button {
-  display: block;
-  position: relative;
-  padding: 18px 24px;
-  margin-top: 24px;
-  width: 170px;
-  text-align: center;
-  background: #0077FF;
-  border-radius: 10px;
-  font-family: 'Roboto', sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 18px;
-  line-height: 18px;
-  color: #fff;
-}
-@media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) {
-  .notfound-content .description .form-button {
-    margin: 24px auto 0;
-  }
-}
-.notfound-content .description .form-button a {
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-}
-.notfound-content .description .form-button:hover {
-  opacity: 0.9;
-  cursor: pointer;
 }
 
 header {
