New dev deploy from 18/0/2021

--- a/styles/chunk2.main.css
+++ b/styles/chunk2.main.css
@@ -521,7 +521,7 @@ section.opack-container {
 .ur-certified {
   width: 419px;
   height: 154px;
-  background-image: url(/assets/images/ur-plus-certified.png);
+  background-image: url(/assets/images/ur-plus-certified.jpg);
   background-size: contain;
   background-repeat: no-repeat;
   margin: 60px 0 110px;
