--- a/styles/chunk8.main.css
+++ b/styles/chunk8.main.css
@@ -1,165 +1,98 @@
-.blog-editor {
-  padding-top: 80px;
-  background: #f5f5f5;
+footer {
+  background: #323234;
+  padding: 40px 0;
 }
-.blog-editor--container {
+footer .footer-content {
   max-width: 940px;
   margin: 0 auto;
-  padding-top: 60px;
-  padding-bottom: 60px;
-}
-.blog-editor--container .editor-settings {
-  padding-top: 36px;
   display: flex;
   flex-direction: row;
+  padding: 0;
   justify-content: space-between;
-  align-items: flex-end;
 }
-.blog-editor--container .editor-settings .article-title-desc {
-  max-width: 460px;
+@media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) {
+  footer .footer-content {
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+  }
 }
-.blog-editor--container .editor-settings .article-title-desc .input {
+@media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) {
+  footer .footer-content .left-side {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+footer .footer-content .left-side .icon-links {
   display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: stretch;
-  padding: 12px 0;
 }
-.blog-editor--container .editor-settings .article-title-desc .input span {
-  font-family: Roboto;
+footer .footer-content .left-side .icon-links .link {
+  width: 42px;
+  height: 42px;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+footer .footer-content .left-side .icon-links .link:nth-child(even) {
+  margin: 0 16px;
+}
+footer .footer-content .left-side .icon-links .link a {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+footer .footer-content .left-side .icon-links .link-icon {
+  width: 24px;
+  height: 24px;
+}
+footer .footer-content .left-side .icon-links .link:hover {
+  background-color: rgba(255, 255, 255, 0.1);
+  border-radius: 50%;
+}
+footer .footer-content .left-side .text-links {
+  display: flex;
+  flex-direction: row;
+  margin-top: 40px;
+  flex-wrap: wrap;
+}
+@media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) {
+  footer .footer-content .left-side .text-links {
+    margin-top: 30px;
+  }
+}
+footer .footer-content .left-side .text-links a {
+  font-family: 'Roboto', sans-serif;
+  font-size: 12px;
+  line-height: 14px;
+  color: #c4c4c4;
+  text-decoration: none;
+}
+footer .footer-content .left-side .text-links a:nth-child(even) {
+  margin: 0 24px;
+}
+footer .footer-content .left-side .text-links a:hover {
+  color: #898989;
+}
+footer .footer-content .right-side {
+  align-self: flex-end;
+}
+@media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) {
+  footer .footer-content .right-side {
+    align-self: center;
+    margin-top: 30px;
+  }
+}
+footer .footer-content .right-side p {
+  font-family: 'Roboto', sans-serif;
   font-style: normal;
   font-weight: normal;
-  font-size: 14px;
+  font-size: 12px;
   line-height: 14px;
-  color: #8E8E93;
-}
-.blog-editor--container .editor-settings .article-title-desc .input input,
-.blog-editor--container .editor-settings .article-title-desc .input textarea {
-  margin-top: 12px;
-  padding: 16px 12px;
-  border-radius: 8px;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  background: #ffffff;
-  border: 1px solid #D2D2D4;
-  box-sizing: border-box;
-  display: block;
-  outline: none;
-  box-shadow: none;
-  font-family: 'Roboto', sans-serif;
-  font-weight: normal;
-  font-size: 16px;
-  line-height: 18px;
-  color: #040506;
-  transition: box-shadow 0.1s ease-in, border 0.1s ease-in;
-}
-.blog-editor--container .editor-settings .article-title-desc .input input:focus,
-.blog-editor--container .editor-settings .article-title-desc .input textarea:focus {
-  border: 1px solid #ff9500 !important;
-  box-shadow: 0px 0px 0px 4px rgba(255, 149, 0, 0.1);
-}
-.blog-editor--container .editor-settings .article-title-desc .input textarea {
-  min-height: 80px;
-  resize: vertical;
-}
-.blog-editor--container .editor-settings .article-title-desc .input.error input {
-  border: 1px solid rgba(255, 59, 48, 0.4);
-  background: rgba(255, 59, 48, 0.05);
-}
-.blog-editor--container .editor-settings .article-actions {
-  max-width: 380px;
-}
-.blog-editor--container .editor-settings .article-actions p {
-  font-family: 'Roboto', sans-serif;
-  font-size: 14px;
-  line-height: 1.3em;
-  color: #6b6b6b;
-  margin: 24px 0;
-}
-.blog-editor--container .editor-settings .article-actions .buttons {
-  display: flex;
-  justify-content: flex-end;
-  width: 100%;
-}
-.blog-editor--container .editor-settings .article-actions .buttons .action-button-orange:first-child {
-  margin-right: 20px;
-}
-.blog-editor--container #editorjs {
-  background: #FFFFFF;
-  padding: 40px 0;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  box-shadow: 0 12px 24px rgba(0, 0, 0, 0.05);
-  margin-top: 40px;
-}
-.blog-editor--container #editorjs .ce-toolbox--opened {
-  background: #f7f7f7;
-}
-.blog-editor--container #editorjs .cdx-block {
-  padding: 12px 12px;
-  max-width: 620px;
-  font-family: 'Roboto', sans-serif;
-  font-size: 18px;
-  line-height: 1.5em;
-  color: #37352f;
-}
-.blog-editor--container #editorjs .cdx-block a {
-  color: #ff9500;
-  text-decoration: underline;
-}
-.blog-editor--container #editorjs .cdx-block:hover {
-  background: #f8f8f8;
-  border-radius: 3px;
-}
-.blog-editor--container #editorjs .cdx-block.cdx-simple-image {
-  max-width: none;
-}
-.blog-editor--container #editorjs .cdx-block.cdx-list {
-  padding-left: 36px;
-}
-.blog-editor--container #editorjs .cdx-block.cdx-list .cdx-list__item {
-  font-size: 16px;
-}
-.blog-editor--container #editorjs .ce-header {
-  max-width: 620px;
-  padding: 4px 12px 4px;
-  margin-bottom: 4px;
-  margin-top: 26px;
-  font-family: 'Roboto', sans-serif;
-  font-weight: 700;
-  color: #000000;
-  line-height: 1.3em;
-}
-.blog-editor--container #editorjs .ce-header:hover {
-  background: #f8f8f8;
-  border-radius: 3px;
-}
-.blog-editor--container #editorjs h2.ce-header {
-  font-size: 24px;
-}
-.blog-editor--container #editorjs h3.ce-header {
-  font-size: 14px;
-  text-transform: uppercase;
-  color: #666666;
-}
-.action-button-orange {
-  padding: 14px 16px;
-  border-radius: 10px;
-  text-align: center;
-  background: #ff9500;
-  font-family: 'Roboto', sans-serif;
-  font-size: 16px;
-  line-height: 19px;
-  color: #ffffff;
-  font-weight: 500;
-  letter-spacing: 0.01em;
-}
-.action-button-orange.grey {
-  background: #DCDCDC;
-  color: #464646;
-}
-.action-button-orange:hover {
-  opacity: 0.85;
-  cursor: pointer;
+  color: #777777;
+  margin: 0;
 }
 
