--- a/styles/chunk8.main.css
+++ b/styles/chunk8.main.css
@@ -38,6 +38,9 @@ footer .footer-content .left-side .icon-links .link {
 footer .footer-content .left-side .icon-links .link:nth-child(even) {
   margin: 0 16px;
 }
+footer .footer-content .left-side .icon-links .link:last-child {
+  margin: 0 0 0 16px;
+}
 footer .footer-content .left-side .icon-links .link a {
   position: absolute;
   top: 0;
